--- a/po/sl.po
+++ b/po/sl.po
@@ -11578,10 +11578,9 @@ msgid "Browse/Edit the points"
 msgstr "Prebrskaj/Uredi točke"
 
 #: tbl_zoom_select.php:394
-#, fuzzy
 #| msgid "Control user"
 msgid "How to use"
-msgstr "Krmilni uporabnik"
+msgstr "Kako uporabljati"
 
 #: themes.php:28
 msgid "Get more themes!"
