--- a/po/sl.po
+++ b/po/sl.po
@@ -11622,7 +11622,7 @@ msgstr "Preimenuj pogled v"
 
 #: po/advisory_rules.php:5
 msgid "Uptime below one day"
-msgstr ""
+msgstr "Neprekinjeno delovanje krajše od enega dneva"
 
 #: po/advisory_rules.php:6
 msgid "Uptime is less than 1 day, performance tuning may not be accurate."
