--- a/po/sl.po
+++ b/po/sl.po
@@ -11657,10 +11657,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:13
-#, fuzzy, php-format
+#, php-format
 #| msgid "Current connection"
 msgid "Current amount of Questions: %s"
-msgstr "Trenutna povezava"
+msgstr "Trenutno število vprašanj: %s"
 
 #: po/advisory_rules.php:15
 #| msgid "Show SQL queries"
