--- a/po/sl.po
+++ b/po/sl.po
@@ -11720,10 +11720,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:28
-#, fuzzy, php-format
+#, php-format
 #| msgid "long_query_time is set to %d second(s)."
 msgid "long_query_time is currently set to %ds."
-msgstr "long_query_time je nastavljen na %d sekund(o)."
+msgstr "long_query_time je trenutno nastavljen na %d s."
 
 #: po/advisory_rules.php:30
 #, fuzzy
