--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:15+0200\n"
+"PO-Revision-Date: 2011-08-16 22:16+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11726,10 +11726,9 @@ msgid "long_query_time is currently set to %ds."
 msgstr "long_query_time je trenutno nastavljen na %d s."
 
 #: po/advisory_rules.php:30
-#, fuzzy
 #| msgid "Show query box"
 msgid "Slow query logging"
-msgstr "Prikaži polje poizvedbe"
+msgstr "Beleženje počasnih poizvedb"
 
 #: po/advisory_rules.php:31
 #, fuzzy
