--- a/po/sl.po
+++ b/po/sl.po
@@ -11743,7 +11743,7 @@ msgstr ""
 
 #: po/advisory_rules.php:33
 msgid "log_slow_queries is set to 'OFF'"
-msgstr ""
+msgstr "log_slow_queries je nastavljen na 'OFF'"
 
 #: po/advisory_rules.php:35
 #, fuzzy
