Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -11770,10 +11770,9 @@ msgid "Current version: %s"
 msgstr "Trenutna različica: %s"
 
 #: po/advisory_rules.php:40 po/advisory_rules.php:45
-#, fuzzy
 #| msgid "Version"
 msgid "Minor Version"
-msgstr "Različica"
+msgstr "Manjša različica"
 
 #: po/advisory_rules.php:41
 msgid "Version less than 5.1.30 (the first GA release of 5.1)."
