Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -11783,6 +11783,8 @@ msgid ""
 "You should upgrade, as recent versions of MySQL 5.1 have improved "
 "performance and MySQL 5.5 even more so."
 msgstr ""
+"Morali bi posodobiti, saj imajo najnovejše različice MySQL 5.1 izboljšano "
+"učinkovitost, MySQL 5.5 pa še bolj."
 
 #: po/advisory_rules.php:46
 msgid "Version less than 5.5.8 (the first GA release of 5.5)."
