--- a/po/sl.po
+++ b/po/sl.po
@@ -11817,7 +11817,7 @@ msgstr ""
 
 #: po/advisory_rules.php:56
 msgid "The MySQL manual only is accurate for official MySQL binaries."
-msgstr ""
+msgstr "Priročnik MySQL je točen samo za uradne izdaje MySQL."
 
 #: po/advisory_rules.php:57
 msgid "Percona documentation is at http://www.percona.com/docs/wiki/"
