--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:22+0200\n"
+"PO-Revision-Date: 2011-08-16 22:23+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11846,7 +11846,7 @@ msgstr ""
 #: po/advisory_rules.php:63
 #, php-format
 msgid "Available memory on this host: %s"
-msgstr ""
+msgstr "Razpoložljiv pomnilnik na tem gostitelju: %s"
 
 #: po/advisory_rules.php:65
 #, fuzzy
