--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:26+0200\n"
+"PO-Revision-Date: 2011-08-16 22:27+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11982,10 +11982,9 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:95
-#, fuzzy
 #| msgid "Query cache"
 msgid "Query cache max size"
-msgstr "Predpomnilnik poizvedb"
+msgstr "Največja velikost predpomnilnika poizvedb"
 
 #: po/advisory_rules.php:96
 msgid ""
