Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -12030,10 +12030,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr "query_cache_limit je nastavljen na 1 MiB"
 
 #: po/advisory_rules.php:105
-#, fuzzy
 #| msgid "Allows creating temporary tables."
 msgid "Percentage of sorts that cause temporary tables"
-msgstr "Omogoča ustvarjanje začasnih tabel."
+msgstr "Odstotek razvrščanj, ki so povzročila začasne tabele"
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
 #, fuzzy
