--- a/po/sl.po
+++ b/po/sl.po
@@ -12035,10 +12035,9 @@ msgid "Percentage of sorts that cause temporary tables"
 msgstr "Odstotek razvrščanj, ki so povzročila začasne tabele"
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
-#, fuzzy
 #| msgid "Allows creating temporary tables."
 msgid "Too many sorts are causing temporary tables."
-msgstr "Omogoča ustvarjanje začasnih tabel."
+msgstr "Preveč razvrščanj povzroča začasne tabele."
 
 #: po/advisory_rules.php:107 po/advisory_rules.php:112
 msgid ""
