--- a/po/sl.po
+++ b/po/sl.po
@@ -12069,10 +12069,9 @@ msgstr ""
 "Povprečje začasnih tabel: %s; ta vrednost bi morala biti manj kot 1 na uro."
 
 #: po/advisory_rules.php:115
-#, fuzzy
 #| msgid "Start row"
 msgid "Sort rows"
-msgstr "Začetna vrstica"
+msgstr "Razvrščanje vrstic"
 
 #: po/advisory_rules.php:116
 msgid "There are lots of rows being sorted."
