--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:30+0200\n"
+"PO-Revision-Date: 2011-08-16 22:31+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12075,7 +12075,7 @@ msgstr "Razvrščanje vrstic"
 
 #: po/advisory_rules.php:116
 msgid "There are lots of rows being sorted."
-msgstr ""
+msgstr "Veliko vrstic je razvrščanih."
 
 #: po/advisory_rules.php:117
 msgid ""
