Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -12088,7 +12088,7 @@ msgstr ""
 #: po/advisory_rules.php:118
 #, php-format
 msgid "Sorted rows average: %s"
-msgstr ""
+msgstr "Povprečje razvrščenih vrstic: %s"
 
 #: po/advisory_rules.php:120
 #, fuzzy
