Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:31+0200\n"
+"PO-Revision-Date: 2011-08-16 22:32+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12096,10 +12096,9 @@ msgid "Rate of joins without indexes"
 msgstr "Delež stikov brez indeksov"
 
 #: po/advisory_rules.php:121
-#, fuzzy
 #| msgid "There are no routines to display."
 msgid "There are too many joins without indexes."
-msgstr "Ni rutin za prikaz."
+msgstr "Obstaja preveč stikov brez indeksov."
 
 #: po/advisory_rules.php:122
 msgid ""
