Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:33+0200\n"
+"PO-Revision-Date: 2011-08-16 22:34+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12210,6 +12210,7 @@ msgid ""
 "Many temporary tables are being written to disk instead of being kept in "
 "memory."
 msgstr ""
+"Veliko začasnih tabel je zapisanih na disk, namesto shranjenih v pomnilniku."
 
 #: po/advisory_rules.php:147
 msgid ""
