--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:35+0200\n"
+"PO-Revision-Date: 2011-08-16 22:36+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12274,7 +12274,7 @@ msgstr ""
 
 #: po/advisory_rules.php:158
 msgid "key_buffer_size is 0"
-msgstr ""
+msgstr "key_buffer_size je 0"
 
 #: po/advisory_rules.php:160
 #, fuzzy, php-format
