Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -12303,10 +12303,9 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-#, fuzzy
 #| msgid "Sort buffer size"
 msgid "Percentage of MyISAM key buffer used"
-msgstr "Velikost medpomnilnika razvrščanja"
+msgstr "Odstotek uporabljenega medpomnilnika ključev"
 
 #: po/advisory_rules.php:168
 #, php-format
