Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:40+0200\n"
+"PO-Revision-Date: 2011-08-16 22:51+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -10266,7 +10266,6 @@ msgstr ""
 "grafikonu."
 
 #: server_status.php:1511
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/>\n"
 #| "        Ok, you are good to go! Once you click 'Start monitor' your "
@@ -10285,18 +10284,11 @@ msgid ""
 "confirmed, this will load a table of grouped queries, there you may click on "
 "any occuring SELECT statements to further analyze them."
 msgstr ""
-"<b>Uporaba nadziranja:</b><br/>\n"
-"        V redu, pripravljeni ste! Ko kliknete 'Začni nadziranje', se bo vaš "
-"brskalnik osvežil in prikazal grafikone\n"
-"        v rednih razmikih. Dodajate lahko grafikone in spremenite pogostost "
-"osveževanja pod 'Nastavitve' ali pa\n"
-"        odstranite kateri koli grafikon s klikom na ikono zobnika ob "
-"ustreznem grafikonu.\n"
-"        <p>Ko opazite nenavadno povečanje dejavnosti, izberite ustrezno "
-"časovno obdobje na katerem koli grafikonu tako, da pridržite\n"
-"        levi miškin gumb in kazalec povlečete čez grafikon. To bo naložilo "
-"statistike iz dnevnikov, kar vam bo pomagalo odkriti vzrok\n"
-"        povečane dejavnosti.</p>"
+"Za prikaz poizvedb iz dnevnikov izberite ustrezno časovno obdobje na katerem "
+"koli grafikonu tako, da pridržite levi miškin gumb in kazalec povlečete čez "
+"grafikon. Ko potrdite, bo to naložilo tabelo združenih poizvedb, kjer lahko "
+"kliknete na katere koli ponavljajoče stavke SELECT in jih naprej "
+"analizirate."
 
 #: server_status.php:1518
 msgid "Please note:"
