--- a/po/sl.po
+++ b/po/sl.po
@@ -12386,10 +12386,10 @@ msgid "Opened files rate: %s, this value should be less than 5 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:190
-#, fuzzy, php-format
+#, php-format
 #| msgid "Create table on database %s"
 msgid "Immediate table locks %%"
-msgstr "Ustvari novo tabelo v podatkovni zbirki %s"
+msgstr "%% takojšnjih zaklepov tabel"
 
 #: po/advisory_rules.php:191 po/advisory_rules.php:196
 #, fuzzy
