--- a/po/sl.po
+++ b/po/sl.po
@@ -12440,10 +12440,9 @@ msgid "Thread cache hit rate %%"
 msgstr "Sledenje ni aktivno."
 
 #: po/advisory_rules.php:206
-#, fuzzy
 #| msgid "Tracking is not active."
 msgid "Thread cache is not efficient."
-msgstr "Sledenje ni aktivno."
+msgstr "Predpomnjenje niti ni učinkovito."
 
 #: po/advisory_rules.php:207
 msgid "Increase {thread_cache_size}."
