--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:53+0200\n"
+"PO-Revision-Date: 2011-08-16 22:54+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12446,7 +12446,7 @@ msgstr "Predpomnjenje niti ni učinkovito."
 
 #: po/advisory_rules.php:207
 msgid "Increase {thread_cache_size}."
-msgstr ""
+msgstr "Povečajte {thread_cache_size}."
 
 #: po/advisory_rules.php:208
 #, php-format
