--- a/po/sl.po
+++ b/po/sl.po
@@ -12458,10 +12458,9 @@ msgid "Threads that are slow to launch"
 msgstr ""
 
 #: po/advisory_rules.php:211
-#, fuzzy
 #| msgid "The number of threads that are not sleeping."
 msgid "There are too many threads that are slow to launch."
-msgstr "Število niti, ki ne spijo."
+msgstr "Obstaja preveč niti, ki so prepočasne za zagon."
 
 #: po/advisory_rules.php:212
 msgid ""
