--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:54+0200\n"
+"PO-Revision-Date: 2011-08-16 22:55+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12455,7 +12455,7 @@ msgstr ""
 
 #: po/advisory_rules.php:210
 msgid "Threads that are slow to launch"
-msgstr ""
+msgstr "Niti, ki se zaganjajo počasi"
 
 #: po/advisory_rules.php:211
 #| msgid "The number of threads that are not sleeping."
