--- a/po/sl.po
+++ b/po/sl.po
@@ -12460,7 +12460,7 @@ msgstr "Niti, ki se zaganjajo počasi"
 #: po/advisory_rules.php:211
 #| msgid "The number of threads that are not sleeping."
 msgid "There are too many threads that are slow to launch."
-msgstr "Obstaja preveč niti, ki so prepočasne za zagon."
+msgstr "Obstaja preveč niti, ki se zaganjajo počasi."
 
 #: po/advisory_rules.php:212
 msgid ""
