Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -12518,10 +12518,9 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:225
-#, fuzzy
 #| msgid "Persistent connections"
 msgid "Percentage of aborted connections"
-msgstr "Vztrajne povezave"
+msgstr "Odstotek prekinjenih povezav"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
