--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:55+0200\n"
+"PO-Revision-Date: 2011-08-16 22:56+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -12546,7 +12546,7 @@ msgstr "Delež prekinjenih povezav"
 
 #: po/advisory_rules.php:231
 msgid "Too many connections are aborted"
-msgstr ""
+msgstr "Preveč povezav je prekinjenih"
 
 #: po/advisory_rules.php:233
 #, php-format
