--- a/po/sl.po
+++ b/po/sl.po
@@ -12601,7 +12601,7 @@ msgstr "Nimate omogočenega InnoDB."
 
 #: po/advisory_rules.php:247
 msgid "InnoDB is usually the better choice for table engines."
-msgstr ""
+msgstr "InnoDB je po navadi boljša izbira za pogone tabel."
 
 #: po/advisory_rules.php:248
 msgid "have_innodb is set to 'value'"
