Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 16:10+0200\n"
+"PO-Revision-Date: 2011-08-17 02:41+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -9354,6 +9354,8 @@ msgid ""
 "changing (by reading the documentation) and how to undo the change. Wrong "
 "tuning can have a very negative effect on performance."
 msgstr ""
+"設定を変更する前に、（ドキュメントを読んで）変更内容と変更箇所を元に戻す方法を確認しておいてください。間違ったチューニングは、パフォーマンスに非常に悪影"
+"響を与える可能性があります。"
 
 #: server_status.php:814
 msgid ""
