--- a/po/de.po
+++ b/po/de.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-16 19:11+0200\n"
-"PO-Revision-Date: 2011-08-13 02:00+0200\n"
-"Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
+"PO-Revision-Date: 2011-08-17 13:13+0200\n"
+"Last-Translator:  <franz.georg@neurieser.eu>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -415,10 +415,10 @@ msgid "You have to choose at least one column to display"
 msgstr "Bitte wählen Sie mindestens eine anzuzeigende Spalte"
 
 #: db_qbe.php:186
-#, fuzzy, php-format
+#, php-format
 #| msgid "visual builder"
 msgid "Switch to %svisual builder%s"
-msgstr "Wechseln zu %svisual builder%s"
+msgstr "Zu %svisual builder%s wechseln"
 
 #: db_qbe.php:222 libraries/db_structure.lib.php:90
 #: libraries/display_tbl.lib.php:955
