--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-16 19:11+0200\n"
-"PO-Revision-Date: 2011-08-17 13:13+0200\n"
+"PO-Revision-Date: 2011-08-17 13:14+0200\n"
 "Last-Translator:  <franz.georg@neurieser.eu>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -1132,10 +1132,9 @@ msgid "Query statistics"
 msgstr "Abfrage-Statistiken"
 
 #: js/messages.php:93
-#, fuzzy
 #| msgid "Local monitor configuration icompatible"
 msgid "Local monitor configuration incompatible"
-msgstr "Lokale Monitor-Konfiguration ist inkompatibel"
+msgstr "Die lokale Bildschirmkonfiguration ist nicht kompatibel."
 
 #: js/messages.php:94
 msgid ""
