Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-16 19:11+0200\n"
-"PO-Revision-Date: 2011-08-17 13:16+0200\n"
+"PO-Revision-Date: 2011-08-17 13:21+0200\n"
 "Last-Translator:  <franz.georg@neurieser.eu>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -1710,6 +1710,8 @@ msgstr ""
 #: js/messages.php:272
 msgid "Click a data point to view and possibly edit the data row."
 msgstr ""
+"Auf einen Datenpunkt klicken, um eine Datenzeile anzuzeigen bzw. zu "
+"editieren."
 
 #: js/messages.php:274
 msgid "The plot can be resized by dragging it along the bottom right corner."
