--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-16 19:11+0200\n"
-"PO-Revision-Date: 2011-08-17 13:21+0200\n"
+"PO-Revision-Date: 2011-08-17 13:23+0200\n"
 "Last-Translator:  <franz.georg@neurieser.eu>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -1716,6 +1716,8 @@ msgstr ""
 #: js/messages.php:274
 msgid "The plot can be resized by dragging it along the bottom right corner."
 msgstr ""
+"Die Größe der Darstellung kann durch Ziehen in die rechte untere Ecke "
+"verändert werden."
 
 #: js/messages.php:276
 msgid "Strings are converted into integer for plotting"
