--- a/ChangeLog
+++ b/ChangeLog
@@ -44,6 +44,9 @@ phpMyAdmin - ChangeLog
 - bug #3380946 [export] no uid Query result export (Suhosin limit)
 + Grid editing in browse mode (replaces row inline edit)
 + Zoom-search in table Search
++ [interface] Editor for GIS data
++ [import] Import GIS data from ESRI Shapefiles
++ [interface] 'Function based search' for GIS data
 
 3.4.5.0 (not yet released)
 - bug #3375325 [interface] Page list in navigation frame looks odd
