Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -902,7 +902,7 @@ msgstr "Vrstice zaključene z"
 
 #: gis_data_editor.php:221 gis_data_editor.php:275
 msgid "Outer Ring:"
-msgstr ""
+msgstr "Zunanji obroč:"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:290
 msgid "Inner Ring"
