--- a/po/sl.po
+++ b/po/sl.po
@@ -906,7 +906,7 @@ msgstr "Zunanji obroč:"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:290
 msgid "Inner Ring"
-msgstr ""
+msgstr "Notranji obroč"
 
 #: gis_data_editor.php:248
 #, fuzzy
